--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -9,6 +9,7 @@
         "gatsby-image": "^2.2.44",
         "gatsby-plugin-manifest": "^2.3.3",
         "gatsby-plugin-offline": "^3.0.41",
+        "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
         "gatsby-plugin-react-helmet": "^3.1.24",
         "gatsby-plugin-sharp": "^2.5.3",
         "gatsby-source-filesystem": "^2.1.56",
