--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -2,18 +2,26 @@
     "name": "parallel45.io",
     "private": true,
     "description": "Website of Parallel45",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "author": "Yves Gurcan <yves@parallel45.io>",
     "dependencies": {
         "gatsby": "^2.19.45",
         "gatsby-image": "^2.2.44",
+        "gatsby-plugin-google-analytics": "^2.2.2",
         "gatsby-plugin-manifest": "^2.3.3",
         "gatsby-plugin-offline": "^3.0.41",
         "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
         "gatsby-plugin-react-helmet": "^3.1.24",
         "gatsby-plugin-sharp": "^2.5.3",
+        "gatsby-remark-copy-linked-files": "^2.2.1",
+        "gatsby-remark-images": "^3.2.1",
+        "gatsby-remark-prismjs": "^3.4.1",
+        "gatsby-remark-responsive-iframe": "^2.3.1",
+        "gatsby-remark-smartypants": "^2.2.1",
         "gatsby-source-filesystem": "^2.1.56",
+        "gatsby-transformer-remark": "^2.7.1",
         "gatsby-transformer-sharp": "^2.4.3",
+        "prismjs": "^1.19.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
@@ -23,6 +31,7 @@
     "devDependencies": {
         "prettier": "^1.19.1"
     },
+    "homepage": "https://parallel45.io",
     "keywords": [
         "gatsby"
     ],
@@ -38,9 +47,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+        "url": "https://github.com/yvesgurcan/parallel45.io"
     },
     "bugs": {
-        "url": "https://github.com/gatsbyjs/gatsby/issues"
+        "url": "https://github.com/yvesgurcan/parallel45.io/issues"
     }
 }
