--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -2,7 +2,7 @@
     "name": "parallel45.io",
     "private": true,
     "description": "Website of Parallel45",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "author": "Yves Gurcan <yves@parallel45.io>",
     "dependencies": {
         "gatsby": "^2.19.45",
@@ -13,6 +13,7 @@
         "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
         "gatsby-plugin-react-helmet": "^3.1.24",
         "gatsby-plugin-sharp": "^2.5.3",
+        "gatsby-plugin-styled-components": "^3.2.1",
         "gatsby-remark-copy-linked-files": "^2.2.1",
         "gatsby-remark-images": "^3.2.1",
         "gatsby-remark-prismjs": "^3.4.1",
