--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -12,6 +12,7 @@
         "gatsby-plugin-offline": "^3.0.41",
         "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
         "gatsby-plugin-react-helmet": "^3.1.24",
+        "gatsby-plugin-react-svg": "^3.0.0",
         "gatsby-plugin-sharp": "^2.5.3",
         "gatsby-plugin-styled-components": "^3.2.1",
         "gatsby-remark-copy-linked-files": "^2.2.1",
