--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -26,6 +26,7 @@
         "prismjs": "^1.19.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
+        "react-calendly": "0.0.6",
         "react-dom": "^16.12.0",
         "react-helmet": "^5.2.1",
         "styled-components": "^5.0.1"
@@ -40,7 +41,7 @@
     "license": "MIT",
     "scripts": {
         "build": "gatsby build",
-        "develop": "gatsby develop",
+        "develop": "npm run develop:remote",
         "develop:remote": "gatsby develop --host 0.0.0.0 --port 8080",
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "start": "npm run develop",
