--- a/__gatsby/package.json
+++ b/__gatsby/package.json
@@ -41,9 +41,11 @@
     "license": "MIT",
     "scripts": {
         "start": "gatsby develop --host 0.0.0.0 --port 8080",
-        "clean": "gatsby clean",
-        "build": "gatsby build",
-        "move-build": "echo 'NOT DONE'",
+        "build": "npm run build:clean && npm run build:create && npm run build:remove && npm run build:replace",
+        "build:clean": "gatsby clean",
+        "build:create": "gatsby build",
+        "build:remove": "cd ../ && ./remove.sh",
+        "build:replace": "mv public/* ../",
         "deploy": "npm ci && npm run clean && npm run build && npm run move-build"
     },
     "repository": {
